--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "types:generate": "npx supabase gen types typescript --project-id tgsltdxjsiznabfuwuym > src/types/database.ts"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.55.0",
     "lucide-react": "^0.540.0",
     "next": "15.4.7",
