--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,12 @@
     "**/.git": true,
     "**/.svn": true,
     "**/.hg": true,
-    "**/node_modules": true
+    "**/node_modules": true,
+    "**/bower_components": true,
+    "**/dist": true,
+    "**/target": true,
+    "**/.DS_Store": true,
+    "**/.next": true
   },
   "deno.enablePaths": ["supabase/functions"],
   "deno.lint": true,
