add some session store

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
+
+# Auth Redirect URL Configuration
+# Development - gunakan localhost
+NEXT_PUBLIC_REDIRECT_URL=http://localhost:3000/auth/callback
+
+# Production - gunakan domain produksi
+# NEXT_PUBLIC_REDIRECT_URL=https://trek-link.vercel.app/auth/callback
+
+# Environment
+NODE_ENV=development # development or production
