--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.55.0",
+    "@tailwindcss/forms": "^0.5.10",
     "lucide-react": "^0.540.0",
     "next": "15.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "tailwind-scrollbar": "^4.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
