--- a/package.json
+++ b/package.json
@@ -12,25 +12,28 @@
   "dependencies": {
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.55.0",
-    "@tailwindcss/forms": "^0.5.10",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.540.0",
     "next": "15.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-scrollbar": "^4.0.2",
-    "tailwindcss-animate": "^1.0.7",
+    "recharts": "^3.2.1",
+    "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/forms": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.7",
+    "postcss": "^8.5.6",
     "supabase": "^2.34.3",
-    "tailwindcss": "^4",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
